Offline pages : Fixed an unitialized variable

Fixed initialization of pending_state_ in SavePageRequest.

Bug: 844652
Change-Id: I8c4b2134dc74155330bc918be5e02e614610b2a9
Reviewed-on: https://chromium-review.googlesource.com/1066694
Reviewed-by: Cathy Li <chili@chromium.org>
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560169}
Former-commit-id: 1b41380afb215cea1f1800532e9a0ee566db2f4f